An additional padding was added to the bottom of the page titles to avoid cut off on certain screen sizes.

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ section:first-of-type {
 }
 .section_title {
     min-height: 0;
-    padding: 5vw 4vw 20px;
+    padding: 5vw 4vw 25px;
 }
 .section_title h1 {
     text-align: center;
